--- a/src/styles/ngx-bootstrap/_variables.scss
+++ b/src/styles/ngx-bootstrap/_variables.scss
@@ -1,10 +1,10 @@
 // Colors
-$primary:       $ux-primary !default;
-$secondary:     $ux-primary !default;
+$primary: $ux-color-primary !default;
+$secondary: $ux-color-primary !default;
 
 
 // Navs
 $nav-link-padding-x: 0 !default;
-$nav-tabs-link-hover-border-color:  transparent transparent $ux-highlight !default;
+$nav-tabs-link-hover-border-color:  transparent transparent $ux-color-highlight !default;
 $nav-tabs-link-active-bg:           transparent !default;
-$nav-tabs-link-active-border-color: transparent transparent $ux-primary-medium !default;
+$nav-tabs-link-active-border-color: transparent transparent $ux-color-primary-medium !default;
