--- a/src/app/core/site-navbar/_shared.scss
+++ b/src/app/core/site-navbar/_shared.scss
@@ -3,27 +3,27 @@
 @import '../site-container/shared';
 
 // Specify these
-$nav-background-color: $ux-primary !default;
+$nav-background-color: $ux-color-primary !default;
 $nav-closed-width: 54px !default;
 $nav-open-width: 238px !default;
 
-$nav-element-font-color: $ux-light-gray !default;
+$nav-element-font-color: $ux-color-light-gray !default;
 $nav-element-font-size: 16px !default;
 $nav-element-icon-size: 20px !default;
 $nav-element-icon-width: 27.5px !default;
 $nav-element-padding: 10px !default;
 $nav-element-text-margin-left: 20px !default;
 
-$nav-element-hover-color: $ux-white !default;
-$nav-element-hover-background-color: $ux-primary-medium !default;
+$nav-element-hover-color: $ux-color-white !default;
+$nav-element-hover-background-color: $ux-color-primary-medium !default;
 
-$nav-element-active-background-color: $ux-primary-dark !default;
-$nav-element-active-color: $ux-highlight !default;
+$nav-element-active-background-color: $ux-color-primary-dark !default;
+$nav-element-active-color: $ux-color-highlight !default;
 $nav-element-active-indicator-width: 4px !default;
 
 $nav-element-divider-margin: 10px !default;
 
-$nav-element-logo-color-bg: $ux-brand-background !default;
+$nav-element-logo-color-bg: $ux-color-brand-background !default;
 $nav-element-logo-img-margin: 4px !default;
 $nav-element-logo-img-height: 50px !default;
 
