--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,9 +15,9 @@
 
 body {
 	@include font-normal();
-	@include font-color-dark($ux-body-text);
+	@include font-color-dark($ux-color-body-text);
 
-	background: $ux-background;
+	background: $ux-color-background;
 
 	padding: 0;
 	margin: 0;
