--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -8,37 +8,37 @@ $color-accent: mat-palette($palette-teal, 500, 300, A400) !default;
 $color-background: mat-palette($palette-gray, 200, 50, A100, 800, 900) !default;
 
 //==================================
-// UX Colors
-//==================================
-$ux-highlight: map-get($color-accent, 'lighter') !default;
-$ux-black: $color-black !default;
-$ux-dark-gray: map-get($color-background, 'darker') !default;
-$ux-background: $color-white !default;
-$ux-white: $color-white !default;
-$ux-brand-background: map-get($color-accent, 'default') !default;
-$ux-primary-highlight: map-get($color-primary, 'lightest') !default;
-$ux-primary-medium:  map-get($color-primary, 'lighter') !default;
-$ux-primary:  map-get($color-primary, 'default') !default;
-$ux-primary-dark: map-get($color-primary, 'darker') !default;
-
-$ux-alert-success: #30B390 !default;
-$ux-alert-error: #FF0033 !default;
-$ux-alert-warning: #F8BB00 !default;
-$ux-alert-notification: #00ABF4 !default;
-
-$ux-light-gray: map-get($color-background, 'lightest') !default;
-$ux-medium-gray: map-get($color-background, 'lighter') !default;
-
-$ux-body-text: $ux-dark-gray !default;
-$ux-heading: $ux-black !default;
-$ux-modal-overlay: $ux-medium-gray !default;
-$ux-modal-header: $ux-primary !default;
-$ux-alternate-row-fill: $ux-white !default;
-
-//==================================
 // Status Colors
 //==================================
 $color-success: mat-palette($palette-green) !default;
 $color-warning: mat-palette($palette-yellow) !default;
 $color-info: mat-palette($palette-blue) !default;
 $color-error: mat-palette($palette-red) !default;
+
+//==================================
+// UX Colors
+//==================================
+$ux-color-highlight: map-get($color-accent, 'lighter') !default;
+$ux-color-black: $color-black !default;
+$ux-color-dark-gray: map-get($color-background, 'darker') !default;
+$ux-color-background: $color-white !default;
+$ux-color-white: $color-white !default;
+$ux-color-brand-background: map-get($color-accent, 'default') !default;
+$ux-color-primary-highlight: map-get($color-primary, 'lightest') !default;
+$ux-color-primary-medium:  map-get($color-primary, 'lighter') !default;
+$ux-color-primary:  map-get($color-primary, 'default') !default;
+$ux-color-primary-dark: map-get($color-primary, 'darker') !default;
+
+$ux-color-alert-success: map-get($color-success, 'default') !default;
+$ux-color-alert-error:  map-get($color-error, 'default') !default;
+$ux-color-alert-warning: map-get($color-warning, 'default') !default;
+$ux-color-alert-notification: map-get($color-info, 'default') !default;
+
+$ux-color-light-gray: map-get($color-background, 'lightest') !default;
+$ux-color-medium-gray: map-get($color-background, 'lighter') !default;
+
+$ux-color-body-text: $ux-color-dark-gray !default;
+$ux-color-heading: $ux-color-black !default;
+$ux-color-modal-overlay: $ux-color-medium-gray !default;
+$ux-color-modal-header: $ux-color-primary !default;
+$ux-color-alternate-row-fill: $ux-color-white !default;
