updated styling for pager component

--- a/src/styles/ngx-bootstrap/_variables.scss
+++ b/src/styles/ngx-bootstrap/_variables.scss
@@ -2,6 +2,8 @@
 $primary: $ux-color-primary !default;
 $secondary: $ux-color-primary !default;
 
+// Links
+$link-hover-color: $ux-color-highlight !default;
 
 // Navs
 $nav-link-padding-x: 0 !default;
