update styling for radio/checkboxes to match ux guidelines

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import 'styles/display';
 @import 'styles/icons';
 @import 'styles/links';
+@import 'styles/selection';
 @import 'styles/typography';
 
 /* You can add global styles to this file, and also import other style files */
