scss cleanup.  replaced bootstrap style declarations with variable overrides where appropriate

--- a/src/app/common/loading-spinner/loading-spinner.component.scss
+++ b/src/app/common/loading-spinner/loading-spinner.component.scss
@@ -1,6 +1,5 @@
 @import '../../../styles/overrides';
-@import '../../../styles/colors';
-@import '../../../styles/typography';
+@import '../../../styles/shared';
 
 $loading-spinner-border: 5px !default;
 $loading-spinner-color: map-get($color-primary, 'darker') !default;
