--- a/src/app/common/paging/pager/pager.component.scss
+++ b/src/app/common/paging/pager/pager.component.scss
@@ -1,5 +1,5 @@
 @import '../../../../styles/overrides';
-@import '../../../../styles/colors';
+@import '../../../../styles/shared';
 
 $pager-status-warning-color: $ux-color-alert-warning !default;
 
