--- a/src/app/core/help/help.component.scss
+++ b/src/app/core/help/help.component.scss
@@ -1,6 +1,25 @@
-@import '../../../styles/colors';
+@import '../../../styles/shared';
+@import '../../../styles/ngx-bootstrap/shared';
 
-$section-selected-color: #33495f;
+$callout-color-default-light: #e4eaf0 !default;
+$callout-color-default-med: #cbd0d6 !default;
+$callout-color-default-dark: #777f93 !default;
+
+$callout-color-danger-light: #e99897 !default;
+$callout-color-danger-med: #c25152 !default;
+$callout-color-danger-dark: #7f2a2a !default;
+
+$callout-color-warning-light: #fed !default;
+$callout-color-warning-med: #c96 !default;
+$callout-color-warning-dark: #a63 !default;
+
+$callout-color-info-light: #def !default;
+$callout-color-info-med: #5bc0de !default;
+$callout-color-info-dark: #3a87ad !default;
+
+$callout-border-color: #eee !default;
+
+$help-section-selected-color: #33495f !default;
 
 .help-content {
 	& > .row {
@@ -26,12 +45,67 @@ $section-selected-color: #33495f;
 
 	.topic-selected {
 		background-color: #eee;
-		color: $section-selected-color;
+		color: $help-section-selected-color;
 		font-weight: bold;
 		text-decoration: none;
 
 		&:hover {
-			color: $section-selected-color;
+			color: $help-section-selected-color;
+		}
+	}
+}
+
+//=====================================
+//	Callouts
+//=====================================
+::ng-deep .callout {
+	border: 1px solid $callout-border-color;
+	border-left-width: 5px;
+	border-radius: 3px;
+	margin: map-get($spacers, 3) 0;
+	padding: map-get($spacers, 4);
+
+	h4 {
+		margin-bottom: map-get($spacers, 1);
+		margin-top: 0;
+	}
+
+	p {
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	// Variations
+	&.callout-danger {
+		border-left-color: $callout-color-danger-med;
+
+		h4 {
+			color: $callout-color-danger-dark;
+		}
+	}
+
+	&.callout-warning {
+		border-left-color: $callout-color-warning-med;
+
+		h4 {
+			color: $callout-color-warning-dark;
+		}
+	}
+
+	&.callout-info {
+		border-left-color: $callout-color-info-med;
+
+		h4 {
+			color: $callout-color-info-dark;
+		}
+	}
+
+	&.callout-default {
+		border-left-color: $callout-color-default-med;
+
+		h4 {
+			color: $callout-color-default-dark;
 		}
 	}
 }
