--- a/src/app/core/site-navbar/_shared.scss
+++ b/src/app/core/site-navbar/_shared.scss
@@ -1,5 +1,4 @@
-@import '../../../styles/colors';
-@import '../../../styles/typography';
+@import '../../../styles/shared';
 @import '../site-container/shared';
 
 // Specify these
