--- a/src/styles/_selection.scss
+++ b/src/styles/_selection.scss
@@ -1,4 +1,4 @@
-@import './colors';
+@import 'shared';
 
 $radio-checkbox-label-color: $ux-color-body-text !default;
 $radio-checkbox-checked-color: $ux-color-primary-medium !default;
