--- a/src/styles/ngx-bootstrap/_variables.scss
+++ b/src/styles/ngx-bootstrap/_variables.scss
@@ -1,3 +1,5 @@
+@import '../shared';
+
 // Colors
 $primary: $ux-color-primary !default;
 $secondary: $ux-color-primary !default;
@@ -10,3 +12,32 @@ $nav-link-padding-x: 0 !default;
 $nav-tabs-link-hover-border-color:  transparent transparent $ux-color-highlight !default;
 $nav-tabs-link-active-bg:           transparent !default;
 $nav-tabs-link-active-border-color: transparent transparent $ux-color-primary-medium !default;
+
+// Card
+$card-border-color:                 $ux-color-dark-gray !default;
+
+// Dropdown
+$dropdown-padding-y:				0 !default;
+$dropdown-spacer:					0 !default;
+$dropdown-bg:						$ux-color-light-gray !default;
+$dropdown-border-color:             $ux-color-dark-gray !default;
+$dropdown-box-shadow: 				0 1px 4px rgba(0, 0, 0, .3) !default;
+$dropdown-link-hover-bg:			$ux-color-medium-gray !default;
+
+$dropdown-item-padding-y:           10px !default;
+$dropdown-item-padding-x:			24px !default;
+
+// Popovers
+$popover-bg:                        #fff !default;
+$popover-border-color:              map-get($color-background, 'default') !default;
+$popover-border-radius:             $border-radius !default;
+$popover-box-shadow:                0 1px 4px rgba(0, 0, 0, .3) !default;
+$popover-body-padding-y:            0 !default;
+$popover-body-padding-x:            0 !default;
+
+// Tooltips
+$tooltip-font-size:                 14px !default;
+$tooltip-color:                     map-get($color-background, 'darkest-contrast') !default;
+$tooltip-bg:                        fade-out(map-get($color-background, 'darkest'), .4) !default;
+$tooltip-padding-y:                 8px !default;
+$tooltip-padding-x:                 16px !default;
