--- a/src/app/common/breadcrumb/breadcrumb.component.scss
+++ b/src/app/common/breadcrumb/breadcrumb.component.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/colors';
-@import '../../../styles/typography';
+@import '../../../styles/overrides';
+@import '../../../styles/shared';
 
 .header {
 	@include font-bold(14px);
