--- a/src/app/common/paging/quick-filters/quick-filters.component.scss
+++ b/src/app/common/paging/quick-filters/quick-filters.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles/colors';
-@import '../../../../styles/typography';
+@import '../../../../styles/overrides';
+@import '../../../../styles/shared';
 
 .quick-select {
 	margin-bottom: 1rem;
