--- a/src/app/common/paging/sortable-table-header/sortable-table-header.component.html
+++ b/src/app/common/paging/sortable-table-header/sortable-table-header.component.html
@@ -1,10 +1,14 @@
 <span *ngIf="header" class="sortable-table-header hide-overflow limit-width-cell" [ngClass]="{'sortable': sortable}" tooltip="{{ sortable ? header.tooltip : ''}}" (click)="sort()" placement="top" container="body">
 	{{ header?.name }}
 	<ng-container *ngIf="sortable">
-		<ng-container *ngIf="currentSortField === header.sortField">
-			<span *ngIf="currentSortDir === 'DESC'" class="fa fa-lg fa-sort-desc"></span>
-			<span *ngIf="currentSortDir === 'ASC'" class="fa fa-lg fa-sort-asc"></span>
-		</ng-container>
-		<span *ngIf="currentSortField !== header.sortField" class="fa fa-sort"></span>
+		<span class="fa-stack fa-lg">
+		  <span class="fa fa-sort-desc fa-stack-1x low-opacity"
+				[ngClass]="{'sorted': currentSortField === header.sortField && currentSortDir === 'DESC' }"
+				style="margin-bottom: -2px"></span>
+		  <span class="fa fa-sort-asc fa-stack-1x low-opacity"
+				[ngClass]="{'sorted': currentSortField === header.sortField && currentSortDir === 'ASC' }"
+				style="margin-top: -2px"></span>
+		</span>
 	</ng-container>
 </span>
+
