--- a/src/app/common/paging/sortable-table-header/sortable-table-header.component.scss
+++ b/src/app/common/paging/sortable-table-header/sortable-table-header.component.scss
@@ -1,30 +1,23 @@
 @import '../../../../styles/overrides';
-@import '../../../../styles/typography';
+@import '../../../../styles/shared';
 
-table {
-	&.mean2starter {
-		th {
-			@include font-bold(16px, $ux-color-body-text, 18px);
+.low-opacity {
+	opacity: .3;
+}
 
-			.sortable-table-header {
-				@include font-bold(16px, $ux-color-body-text, 18px);
+.sorted {
+	color: $ux-color-primary;
+	opacity: 1;
+}
 
-				&.sortable {
-					&:hover {
-						cursor: pointer;
-					}
-				}
+.fa-stack {
+	position: relative;
+	height: 6px;
+	line-height: 6px;
+	width: 22px;
+}
 
-				.fa-sort-desc {
-					position: relative;
-					top: -5px;
-				}
-
-				.fa-sort-asc {
-					position: relative;
-					top: 5px;
-				}
-			}
-		}
-	}
+.sortable-table-header.sortable {
+	cursor: pointer;
+	padding-right: 5px;
 }
