--- a/src/app/core/site-container/_shared.scss
+++ b/src/app/core/site-container/_shared.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/typography';
+@import '../../../styles/shared';
 
 $header-banner-height: $font-line-height !default;
 $header-banner-bg: map-get($color-background, 'darkest') !default;
