--- a/src/app/core/site-container/site-container.component.scss
+++ b/src/app/core/site-container/site-container.component.scss
@@ -1,5 +1,5 @@
 @import '../../../styles/overrides';
-@import '../../../styles/colors';
+@import '../../../styles/shared';
 @import './shared';
 
 header.site-header {
