--- a/src/app/core/site-navbar/site-navbar.component.scss
+++ b/src/app/core/site-navbar/site-navbar.component.scss
@@ -1,6 +1,5 @@
 @import '../../../styles/overrides';
-@import '../../../styles/colors';
-@import '../../../styles/typography';
+@import '../../../styles/shared';
 
 @import '../site-container/shared';
 @import './shared';
