updated header font-sizes to ux standard

--- a/src/styles/ngx-bootstrap/_variables.scss
+++ b/src/styles/ngx-bootstrap/_variables.scss
@@ -4,6 +4,11 @@
 $primary: $ux-color-primary !default;
 $secondary: $ux-color-primary !default;
 
+// Typography
+$h1-font-size: $ux-h1-font-size !default;
+$h2-font-size: $ux-h2-font-size !default;
+$h3-font-size: $ux-h3-font-size !default;
+
 // Links
 $link-hover-color: $ux-color-highlight !default;
 
