--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,5 +1,12 @@
 @import './colors';
 
+$ux-h1-font-size: 22px !default;
+$ux-h2-font-size: 20px !default;
+$ux-h3-font-size: 18px !default;
+$ux-subheading-font-size: 16px !default;
+$ux-label-font-size: 14px !default;
+$ux-caption-font-size: 12px !default;
+
 $font-family: 'Roboto', 'Arial' !default;
 $font-family-bold: 'Roboto-Bold' !default;
 $font-family-light: 'Roboto-Light' !default;
